--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+aiofiles==23.2.1
+annotated-types==0.7.0
+anyio==4.7.0
 asttokens==3.0.0
+certifi==2024.12.14
+charset-normalizer==3.4.0
+click==8.1.7
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
@@ -6,19 +12,36 @@ debugpy==1.8.9
 decorator==5.1.1
 exceptiongroup==1.2.2
 executing==2.1.0
+fastapi==0.115.6
+ffmpy==0.4.0
+filelock==3.16.1
 fonttools==4.55.0
+fsspec==2024.10.0
+gradio==5.9.0
+gradio_client==1.5.2
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+huggingface-hub==0.27.0
+idna==3.10
 ipykernel==6.29.5
 ipython==8.30.0
 jedi==0.19.2
+Jinja2==3.1.4
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib==3.9.3
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 nest-asyncio==1.6.0
 numpy==2.1.3
 opencv-python==4.10.0.84
+orjson==3.10.12
 packaging==24.2
+pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.0.0
@@ -27,13 +50,34 @@ prompt_toolkit==3.0.48
 psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pydantic==2.10.3
+pydantic_core==2.27.1
+pydub==0.25.1
 Pygments==2.18.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
+pytz==2024.2
+PyYAML==6.0.2
 pyzmq==26.2.0
+requests==2.32.3
+rich==13.9.4
+ruff==0.8.3
+safehttpx==0.1.6
+semantic-version==2.10.0
+shellingham==1.5.4
 six==1.16.0
+sniffio==1.3.1
 stack-data==0.6.3
+starlette==0.41.3
+tomlkit==0.13.2
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
+typer==0.15.1
 typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.34.0
 wcwidth==0.2.13
+websockets==14.1
